--- a/src/index.html
+++ b/src/index.html
@@ -6,11 +6,8 @@
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
-    <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCSKKdQtaJep11EijNzQPXfRBZW-De1DYk&libraries=places"
-      async
-      defer
-    ></script>
+<link href="//cdn.muicss.com/mui-0.9.43/css/mui.min.css" rel="stylesheet" type="text/css" />
+<script src="//cdn.muicss.com/mui-0.9.43/js/mui.min.js"></script>   
   </head>
   <body>
     <app-root></app-root>
